--- a/prob2_2025/measure.html
+++ b/prob2_2025/measure.html
@@ -170,7 +170,7 @@ function myFunction() {
 <a href="#Problem set 3">Problem set 3</a>
 </li>
 <li>
-<a href="#Defining 'length'">Defining 'length'</a>
+<a href="#First taste of measure theory">First taste of measure theory</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 4">Problem set 4</a>
@@ -491,7 +491,9 @@ Then which of the following is/are true?
 <p></p>
 
 <h1><a
-name="Defining 'length'">Defining 'length'</a></h1>
+name="First taste of measure theory">First taste of measure theory</a></h1>
+<a href="https://youtu.be/h6X-K_D7JXY">Video for this section</a>
+<p></p>
 Suppose that we are trying to defined Lebesgue integral over an
 interval $[a,b].$ Then we need to define 'length's of subsets of $[a,b].$
 Instead of writing 'length', we shall use the
