--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -279,7 +279,7 @@ At last we come to the definition of multivariate normal.
 <legend><b>Definition:  Multivariate normal</b></legend>
 For any $\v\mu\in{\mathbb R}^m$  and any NND $\Sigma_{m\times m}$  we define  $N_m(\v\mu, \Sigma)$, the $m$-dimensional
  <b><font color="red" size="40">multivariate normal distribution</font></b>  as the distribution of 
- $\v Y=A\v X + \v b$, where $\v X_{m\times 1}$  has IID $N(0,1)$  components, and
+ $\v Y=A\v X + \v \mu$, where $\v X_{m\times 1}$  has IID $N(0,1)$  components, and
  $A_{m\times m}$  is any matrix
  such that $\Sigma = AA'.$
 </fieldset>
@@ -488,7 +488,7 @@ name="Mean and dispersion">Mean and dispersion</a></h2>
 It is easy to find the mean vector and variance matrix of a multivariate normal distribution:
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-If $\v Y\sim N_m(\v\mu,\Sigma)$, then  $E(\v Y)=\v b$   and $V(\v Y) = \Sigma.$ 
+If $\v Y\sim N_m(\v\mu,\Sigma)$, then  $E(\v Y)=\v \mu$   and $V(\v Y) = \Sigma.$ 
 </fieldset>
 
 <p>
