--- a/prob2_2025/hw.html
+++ b/prob2_2025/hw.html
@@ -214,7 +214,7 @@ Then show that  the conditional distribution
 <p></p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;If $X_1,X_2$  are independent $Gamma(p_1,a)$  and $Gamma(p_2,a)$  random
+<b>EXERCISE 9:</b>&nbsp;If $X_1,X_2$  are independent $Gamma(a,p_1)$  and $Gamma(a,p_2)$  random
  variables, then show that 
 $$\frac{X_1}{X_1+X_2}\sim Beta(p_1,p_2).$$
 </p>
