--- a/prob2_2025/hw.html
+++ b/prob2_2025/hw.html
@@ -185,7 +185,7 @@ name="Problems">Problems</a></h1>
 <p>
 <b>EXERCISE 6:</b>&nbsp;If $X\sim N(\mu,\sigma^2)$, then $Y=e^X$  is said to have
  log-normal$(\mu,\sigma^2)$  distribution. Show that $E(Y^k)$  exists finitely for all
- $k\in{\mathbb N}.$  Also show that MGF of $Y$  does not exist anywhere except at $0.$</p>
+ $k\in{\mathbb N}.$  Also show that MGF $m(t)$  of $Y$  does not exist anywhere except for $t\leq 0.$</p>
 
 <p></p>
 
@@ -222,7 +222,7 @@ $$\frac{X_1}{X_1+X_2}\sim Beta(p_1,p_2).$$
 <p></p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;Let $\v X\sim N_n(\v 0, I)$  and $J_{n\times n}$  have all entries equl to 1. Find
+<b>EXERCISE 10:</b>&nbsp;Let $\v X\sim N_n(\v 0, I)$  and $J_{n\times n}$  have all entries equal to 1. Find
  the distribution of $\v X' J\v X.$</p>
 <hr/>
 <table width="100%" border="0">
