--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -288,11 +288,13 @@ Starting with this as the basis, we can use induction over $p$  to establish the
 The following properties are all obvious from the definition.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-If $(X_1,X_2,...,X_p)\sim Dir(a_1,a_2,...,a_p)$, then 
+If $(X_1,X_2,...,X_p)\sim Dir(a_1,a_2,...,a_p,a_{p+1})$, then 
 <ol type="">
 
 <li>for any $k\geq 2$  and distinct $i_1,...,i_k\in\{1,...,p\}$  we have
- $(X_{i_1},...,X_{i_k})\sim Dir(a_{i_1},...,a_{i_k}).$</li>
+ $(X_{i_1},...,X_{i_k})\sim Dir(a_{i_1},...,a_{i_k},a-(a_{i_1}+\cdots+a_{i_k})),$
+where $a = a_1+\cdots+a_{p+1}$.
+</li>
 
 <li>each $X_i\sim Beta\left(a_i,\sum_{j\neq i} a_j\right).$</li>
 
