--- a/prob2_2025/hw.html
+++ b/prob2_2025/hw.html
@@ -204,9 +204,9 @@ Show this by direct computation (not as a corollary to some other exercise from 
 <p></p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;Let $\v \Pi$  be a random vector $(\Pi_1,...,\Pi_k,1-\Pi_1-\cdots\Pi_k),$  where
- $(\Pi_1,...,\Pi_k)\sim Dir(a_1,...,a_{k+1}).$  Let the conditional distribution of $\v
- X$  given $(\Pi_1,...,\Pi_k)$  be $Multinom(n,\v \Pi).$ 
+<b>EXERCISE 8:</b>&nbsp;Let $\v \Pi$  be a random vector $(\Pi_1,...,\Pi_k)$  having distribution
+ $\v \Pi\sim Dir(a_1,...,a_{k+1}).$  Let the conditional distribution of $\v
+ X$  given $\v\Pi$  be $Multinom(n,(\Pi_1,...,\Pi_k,1-\Pi_1-\cdots\Pi_k),).$ 
 Then show that  the conditional distribution
  of $\v \Pi$  given $\v X$  is $Dir(a_1+X_1,...,a_{k+1}+X_{k+1}).$
 </p>
