--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -645,7 +645,7 @@ name="Problem set 5">Problem set 5</a></h2>
 <p>
 <b>EXERCISE 13:</b>&nbsp;(Continuation of the last problem) Write $\v Y = B'A ^{-1} \v X + (\v Y-B'A ^{-1}\v X)$  and 
  show that the conditional distribution of $\v Y$  given $\v X=\v x$  is 
-$N_{n-m} (\v \mu_2+B'A ^{-1}(\v x-\v\mu_1), D-B'A ^{-1} B).$  [Does this remind you of multiple regression?]
+$N_n (\v \mu_2+B'A ^{-1}(\v x-\v\mu_1), C-B'A ^{-1} B).$  [Does this remind you of multiple regression?]
 </p>
 
 <p></p>
