--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -1050,13 +1050,13 @@ Since a matrix is an orthogonal projection matrix iff it is symmetric and idempo
 get  the following result. 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-Let $A$  be a symmetric, idempotent matrix. Then $\v X'A\v X\sim\k{r(A)}.$ 
+Let $A$  be a symmetric, idempotent matrix. Then $\v X'A\v X\sim\k{rank(A)}.$ 
 </fieldset>
 A  sort of converse is also true, as shown in the next theorem.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 Let $\v X\sim N_n(\v 0,I).$  Let $A$  be a real symmetric matrix.  Then $\v X'A\v X\sim \k r$  for some $r\in{\mathbb N}.$ 
- Then $A$  must be idempotent, and $r = r(A).$
+ Then $A$  must be idempotent, and $r = rank(A).$
 </fieldset> 
 
 <p>
@@ -1066,7 +1066,7 @@ This proof requires spectral representation of real, symmetric matrices whch all
 <p></p>
 Then $\v X' A\v X = \v X'P' D P \v X = (P\v X)' D (P\v X).$  
 <p></p>
-Now $\v Y=P\v X\sim N_n(\v0,I)$  and so we can write $(P\v X)' D (P\v X) = \sum_1^k d_i Y_i^2$, where $k=r(A).$
+Now $\v Y=P\v X\sim N_n(\v0,I)$  and so we can write $(P\v X)' D (P\v X) = \sum_1^k d_i Y_i^2$, where $k=rank(A).$
 <p></p>
 The $Y_j$'s are IID $N(0,1)$  and so $Y_j^2$'s are IID $\k 1$  random variables with characteristic function
  $(1-2it)^{-1/2}.$
@@ -1111,7 +1111,7 @@ Since characteristic function determines the distribution, hence $Y\sim\k{n-m},$
 
 <fieldset>
 <legend><b><i>Fact from linear algebra</i></b></legend>
-If $A$  is idempotent, then $r(A)=tr(A).$
+If $A$  is idempotent, then $rank(A)=tr(A).$
 </fieldset>
 
 <p></p>
