--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -769,7 +769,7 @@ Here we think of the sampling procedure as 500 trials of the same  random experi
 We shall assume that the trials are IID. Now here we are introducing an approximation: the first
  membr of the sample was drawn from the entire population, but since we generally sample
  <i>without replacement</i>  in such a scenario, the second member of the sample was drawn from a
- population of size one less than in the case of the first member. So the radom experiment has
+ population of size one less than in the case of the first member. So the random experiment has
  actually changed, and they are not independent also. But since the population is large (much
  larger than 500), so we are ignoring both the non-identical and dependent nature and assuming IID. 
 <p></p>
@@ -789,7 +789,7 @@ $$\bar X_{500} \stackrel{\bullet}{\sim} N\left(0.40,\frac{0.24}{500}\right),$$
 or 
 $$\sum_1^n X_i \stackrel{\bullet}{\sim} N(0.40\times 500,0.24\times 500)\equiv N(200, 120).$$
 Nowe we can find the required probability as
-$$P(\sum_1^{500} X_i \geq 200) \approx 1-\Phi\left(\frac{250-200}{\sqrt{500}}\right).$$
+$$P(\sum_1^{500} X_i \geq 250) \approx 1-\Phi\left(\frac{250-200}{\sqrt{500}}\right).$$
 This probability may be obtained by looking up standard $N(0,1)$  tables or using R as
 <font color="red">
 <pre>
