--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -281,8 +281,8 @@ For $p=2$  and $p=3$  the supports are shown below.
 </center>  
 In general, shapes like $D_p$  are called <b><font color="red" size="40">simplices</font></b>  (singular <b><font color="red" size="40">simplex</font></b>) in ${\mathbb R}^p.$
 <p></p>
-It is not immediately obvious that the total integral of this function is indeed 1. However, it is easy for $p=2,$ because
- if $(X_1,X_2)\sim Dir(a_1,a_2)$  then $X_1\sim Beta(a_1,a_2)$  and $X_2 = 1-X_1.$
+It is not immediately obvious that the total integral of this function is indeed 1. However, it is easy for $p=1,$ because
+ if $X_1\sim Dir(a_1,a_2)$  then $X_1\sim Beta(a_1,a_2).$ 
 Starting with this as the basis, we can use induction over $p$  to establish the general case (easy, try it!).
 <p></p>
 The following properties are all obvious from the definition.
