--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -957,7 +957,7 @@ $$\begin{eqnarray*}
 &amp; = &amp; \mbox{const } (t^2+n)^{-\frac{n+1}{2}}.
 \end{eqnarray*}$$
 If you keep track of the constants, you will find that it is
-$$\frac{\Gamma\left(\frac{n+1}{2}\right)}{\sqrt{n\pi}\Gamma\left(\frac{n}{2}\right)}.$$
+$$\frac{\Gamma\left(\frac{n+1}{2}\right)}{\sqrt{n\pi}\Gamma\left(\frac{n}{2}\right)}\times n^{\frac{n+1}{2}}.$$
 It should not be difficult to see that $t$-density is symmetric around 0. The densities are much like the $N(0,1)$ 
  density. They lie somewhere in-between the Cauchy density and $N(0,1)$  density. As the degrees of freedom increase
  to $\infty,$  the $t$-distribution approaches $N(0,1).$  For degrees of freedom more than 40, the $t$-density
