--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -344,7 +344,10 @@ The abbreviation "p.f." means PMF.  Equation  (6.3.3) referred to in the problem
 ::<p>
 <b>EXERCISE 7:</b>&nbsp;<font size="-2">[wilks5.png]</font><img width="" src="image/wilks5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<font size="-2">[wilks6.png]</font><img width="" src="image/wilks6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 8:</b>&nbsp;<font size="-2">[wilks6.png]</font><img width="" src="image/wilks6.png" style="vertical-align:text-top;">
+<p></p>
+This problem is wrong. The distribution should be $Dir\left(\frac 12,...,\frac 12\right)$. 
+</p>
 ::<p>
 <b>EXERCISE 9:</b>&nbsp;<font size="-2">[wilks8.png]</font><img width="" src="image/wilks8.png" style="vertical-align:text-top;"></p>
 <hr/>
