--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -236,6 +236,8 @@ Though, strictly speaking it is neither continuous nor discrete, yet, colloquall
 
 <h1><a
 name="Cantor distribution (graphically)">Cantor distribution (graphically)</a></h1>
+<a href="https://youtu.be/VKjHQ4K-3D0">Video for this section</a>
+<p></p>
 
 <p></p>
 The example we are going to describe is called <b><font color="red" size="40">Cantor distribution</font></b>. As it has neither a PMF nor a density, we
