--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -167,7 +167,10 @@ function myFunction() {
 <a href="#Convergence of $F_n$">Convergence of $F_n$</a>
 </li>
 <li>
-<a href="#Cantor distribution (rigorously)">Cantor distribution (rigorously)</a>
+<a href="#Cantor distribution (rigorously) (part 1)">Cantor distribution (rigorously) (part 1)</a>
+</li>
+<li>
+<a href="#Cantor distribution (rigorously) (part 2)">Cantor distribution (rigorously) (part 2)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#The limit is a CDF">The limit is a CDF</a>
@@ -313,7 +316,9 @@ To move from one $F_n$  to the next we are leaving horizontal parts unchanged an
 Thus, the change from $F_n$  to any $F_m$   for $m&gt;n$  is at most $2^{-n}.$ 
  Digest this well from the graphs, as this will form the main argument in the proof coming up in the next video.  
 <h1><a
-name="Cantor distribution (rigorously)">Cantor distribution (rigorously)</a></h1>
+name="Cantor distribution (rigorously) (part 1)">Cantor distribution (rigorously) (part 1)</a></h1>
+<a href="https://youtu.be/9YGu4b8x9dA">Video for this section</a>
+<p></p>
 Here we shall  formally prove the uniform convergence of $(F_n).$  We shall employ the uniform Cauchy
  criterion, <i>i.e.</i>, we shall show that
 <p></p>
@@ -354,6 +359,9 @@ So $F_N(a) \leq F_m(x)\leq F_N(b).$  Similarly, $F_N(a) \leq F_n(x)\leq F_N(b).$
 Hence $|F_m(x)-F_n(x)|\leq F_N(b)-F_N(a) = 2^{-N} &lt; \epsilon$, as required. 
 <p></p>
 
+<h1><a
+name="Cantor distribution (rigorously) (part 2)">Cantor distribution (rigorously) (part 2)</a></h1>
+
 <h2><a
 name="The limit is a CDF">The limit is a CDF</a></h2>
 Next we claim that $F$, the uniform limit of $F_n$'s, is indeed a CDF. Each $F_n$  is continuous, and 
@@ -374,6 +382,15 @@ Now, $F$  is differentiable at each point of $\cup T_n.$  and the derivtive is 0
 <p></p>
 For $F$  to admit a density, this $f$  must be a density. But clearly this $f$  cannot be a density. Hence
  $F$  cannot admit a density.
+<p></p>
+Some books provide the following loose definition of the Cantor distribution:
+They start by defining the <b><font color="red" size="40">Cantor set</font></b>  as $S = \cap_n S_n$.  Then the define the Cantor distribution as
+ the uniform distribution on $S$.
+<p></p>
+While this does capture the spirit of the distribution, it is not a rigourous definition, because we have not defined "uniform
+ distribution" only for finite sample spaces, and for distributions with densities. The Cantor distribution does not have
+ PMF or density (shall show in the next section). So it is not clear what "uniform distribution" means here. 
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
