--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -361,6 +361,8 @@ Hence $|F_m(x)-F_n(x)|\leq F_N(b)-F_N(a) = 2^{-N} &lt; \epsilon$, as required.
 
 <h1><a
 name="Cantor distribution (rigorously) (part 2)">Cantor distribution (rigorously) (part 2)</a></h1>
+<a href="https://youtu.be/ry7jBBkmGNw">Video for this section</a>
+<p></p>
 
 <h2><a
 name="The limit is a CDF">The limit is a CDF</a></h2>
