--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -175,8 +175,14 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#The limit is a CDF">The limit is a CDF</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#A &quot;loose&quot; definition">A "loose" definition</a>
+</li>
 <li>
 <a href="#Cantor distribution (properties)">Cantor distribution (properties)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Moments">Moments</a>
 </li>
 </ul>
 <hr/>
@@ -375,16 +381,8 @@ By the fundamental theorem of probability, this $F$  must be the CDF of the dist
  is this distribution that we call the <b><font color="red" size="40">Cantor distribution</font></b>. 
 <p></p>
 
-<h1><a
-name="Cantor distribution (properties)">Cantor distribution (properties)</a></h1>
-We have already seen that $F$  is continuous. Let us consider $T_n = [0,1]\setminus S_n$  for $n=0,1,2,...$ 
- This is the set of points where the graph of $F_n$  is horizontal.   Then the length of $T_n$  increases to $1.$ 
-Now, $F$  is differentiable at each point of $\cup T_n.$  and the derivtive is 0. If we set the derivative 0 everywhere
- else, we get $f(x)\equiv 0.$  
-<p></p>
-For $F$  to admit a density, this $f$  must be a density. But clearly this $f$  cannot be a density. Hence
- $F$  cannot admit a density.
-<p></p>
+<h2><a
+name="A "loose" definition">A "loose" definition</a></h2>
 Some books provide the following loose definition of the Cantor distribution:
 They start by defining the <b><font color="red" size="40">Cantor set</font></b>  as $S = \cap_n S_n$.  Then the define the Cantor distribution as
  the uniform distribution on $S$.
@@ -393,6 +391,40 @@ While this does capture the spirit of the distribution, it is not a rigourous de
  distribution" only for finite sample spaces, and for distributions with densities. The Cantor distribution does not have
  PMF or density (shall show in the next section). So it is not clear what "uniform distribution" means here. 
 <p></p>
+
+<h1><a
+name="Cantor distribution (properties)">Cantor distribution (properties)</a></h1>
+<a href="https://youtu.be/aEVbWTCPLwE">Video for this section</a>
+<p></p>
+We have already seen that $F$  is continuous. However, it does not admit a density, as we show below.
+<p></p>
+
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>Cantor distribution does not admit a density.</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Let us consider $T_n = [0,1]\setminus S_n$  for $n=0,1,2,...$ 
+ This is the set of points where the graph of $F_n$  is horizontal.   Then the length of $T_n$  increases to $1.$ 
+Now, $F$  is differentiable at each point of $\cup T_n.$  and the derivtive is 0. If we set the derivative 0 everywhere
+ else, we get $f(x)\equiv 0.$  
+<p></p>
+For $F$  to admit a density, this $f$  must be a density. But clearly this $f$ 
+ cannot be a density (since its total integral is 0, not 1). Hence
+ $F$  cannot admit a density.
+<b><i>[QED]</i></b>
+</p>
+
+<h2><a
+name="Moments">Moments</a></h2>
+If $X$ is a random variable having the  Cantor distribution, then $X$  is a bounded,
+ nonnegative random variable (since it must lie in $[0,1]$). So all its moments must exist
+ finitely. However, computing them may not appear easy. 
+<p></p>
+For $E(X)$  we note that $1-X$  is again a Cantor random variable (since flipping the unit interval around $\frac 12$ 
+ does not change the $S_n$'s). So by symmetry argument, we have $E(X) = \frac 12$.
+<p></p>
+We need machinery beyond the present syllabus to  compute $E(X^k)$  for general $k\in{\mathbb N}$.
 <hr/>
 <table width="100%" border="0">
 <tr>
