--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -149,10 +149,10 @@ function myFunction() {
 </head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Different types of distributions</h3>
+<h3>Wierd distributions</h3>
 <ul>
 <li>
-<a href="#Wierd distributions">Wierd distributions</a>
+<a href="#Different types of distributions">Different types of distributions</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Neither continuous nor discrete">Neither continuous nor discrete</a>
@@ -186,10 +186,12 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<title>Different types of distributions</title>
+<title>Wierd distributions</title>
 
 <h1><a
-name="Wierd distributions">Wierd distributions</a></h1>
+name="Different types of distributions">Different types of distributions</a></h1>
+<a href="https://youtu.be/FbfrRKz1-54">Video for this section</a>
+<p></p>
 We hae talked about many different types of distributions. Here is a Venn diagram for the different types. 
 <center>
 <table width="100%">
