--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -211,7 +211,7 @@ function myFunction() {
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
+<li>
 <a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
@@ -773,6 +773,8 @@ If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$, what will the scatterpl
 
 <h1><a
 name="$\chi^2$  distribution">$\chi^2$  distribution</a></h1>
+<a href="https://youtu.be/3r6klLqHPpA">Video for this section</a>
+<p></p>
 Starting from this section, we shall discuss some distributions related to the normal distribution.
 <fieldset>
 <legend><b>Definition: $\chi^2$</b></legend>If $X_1,...,X_n$  are IID $N(0,1)$  then the distribution of $\sum_1^n X_i^2$ 
@@ -783,7 +785,7 @@ $$\sum_1^n X_i^2\sim \chi_{(n)}^2.$$
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-$\k n$  is the same as $Gamma\left(\frac n2,\frac 12\right).$
+$\k n$  is the same as $Gamma\left(\frac 12,\frac n2\right).$
 </fieldset>
 
 <p>
@@ -801,9 +803,9 @@ So $X_i^2\sim Gamma\left(\frac 12,\frac 12\right)$   for $i=1,2,...,n.$
 Also they are independent. 
 <p></p>
 So, by the additivity property of the $Gamma$  distribution, we have 
- $\sum_1^n X_i^2 \sim  Gamma\left(\frac{n}{2},\frac 12\right).$
+ $\sum_1^n X_i^2 \sim  Gamma\left(\frac{1}{2},\frac n2\right).$
 <p></p>
-Hence $\k n\equiv  Gamma\left(\frac{n}{2},\frac 12\right),$   as required. 
+Hence $\k n\equiv  Gamma\left(\frac{1}{2},\frac n2\right),$   as required. 
 <b><i>[QED]</i></b>
 </p>
 
@@ -823,8 +825,10 @@ Put $p=\frac 12$  and $\alpha=\frac n2$  in the characteristic function of $Gamm
 <b><i>[QED]</i></b>
 </p>
 
-<h2><a
-name="Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a></h2>
+<h1><a
+name="Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a></h1>
+<a href="https://youtu.be/xDLG6SCBg_Q">Video for this section</a>
+<p></p>
 If we consider a random vetor $\v X$  in ${\mathbb R}^k$  with IID $N(0,1)$  components, $\|\v X\|^2\sim \k k.$ 
  This is little more than the definition. 
 <p></p>
