--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -208,7 +208,7 @@ In particular, we can think of $Multinom(n,\v p)$  as the distribution of the su
 <p></p>
 Suppose we roll the same die twice independently. Accordingly we get 
 $\v X,\v Y$  both having $ Multinom(1,\v p)$  distribution.  Let $\v
- X=(X_1,...,X_k)$, $\v Y=(Y_1,...,Y_n)$    and $\v
+ X=(X_1,...,X_k)$, $\v Y=(Y_1,...,Y_k)$    and $\v
  p=(p_1,...,p_k)$, then 
 <ul>
 <li>$\forall i~~E(X_i) = E(X_i^2)=p_i.$  
@@ -248,7 +248,8 @@ name="Problem set 1">Problem set 1</a></h2>
 
 <h1><a
 name="Dirichlet distribution">Dirichlet distribution</a></h1>
-Now we are going to work with a multivariate distribution called the <b><font color="red" size="40">Dirichlet distribution</font></b>, which has is a multivariate generalisation of the Beta distribution. 
+Now we are going to work with a multivariate distribution called the <b><font color="red" size="40">Dirichlet distribution</font></b>,
+ which is a multivariate generalisation of the Beta distribution. 
 <p></p>
 
 <fieldset>
