--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -646,6 +646,26 @@ name="Problem set 5">Problem set 5</a></h2>
 <b>EXERCISE 13:</b>&nbsp;(Continuation of the last problem) Write $\v Y = B'A ^{-1} \v X + (\v Y-B'A ^{-1}\v X)$  and 
  show that the conditional distribution of $\v Y$  given $\v X=\v x$  is 
 $N_n (\v \mu_2+B'A ^{-1}(\v x-\v\mu_1), C-B'A ^{-1} B).$  [Does this remind you of multiple regression?]
+<p><a
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
+class="ans" id="lab2">
+Let us write the condl distribution as $Distr(\v Y|\v X=\v x)$.
+<p></p>
+Then 
+$$\begin{eqnarray*}
+Distr(\v Y|\v X=\v x) 
+&amp; = &amp; Distr(B'A ^{-1} \v X + (\v Y-B'A ^{-1}\v X)|\v X=\v x)\\
+&amp; = &amp; Distr(B'A ^{-1} \v x + (\v Y-B'A ^{-1}\v X)|\v X=\v x)\\
+&amp; = &amp; B'A ^{-1} \v x +Distr( \v Y-B'A ^{-1}\v X|\v X=\v x)\\
+&amp; = &amp; B'A ^{-1} \v x +Distr( \v Y-B'A ^{-1}\v X)~~\left[\mbox{$\because$  indep}\right]
+\end{eqnarray*}$$
+Now 
+$$\v Y-B'A ^{-1}\v X = \left[\begin{array}{ccccccccccc}-B A ^{-1} &amp; I 
+\end{array}\right]\left[\begin{array}{ccccccccccc}\v X\\\v Y
+\end{array}\right].$$
+So $Distr( \v Y-B'A ^{-1}\v X)$  may be computed easily.
+</div></p>
+
 </p> 
 
 <p></p>
