--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -893,6 +893,8 @@ name="Problem set 7">Problem set 7</a></h2>
 
 <h1><a
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
+<a href="https://youtu.be/BRwFMYfb4rE">Video for this section</a>
+<p></p>
 
 <p></p>
 
