--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -952,6 +952,8 @@ a fixed number?
 
 <h1><a
 name="$t$  distribution">$t$  distribution</a></h1>
+<a href="https://youtu.be/mv62pUoznVI">Video for this section</a>
+<p></p>
 
 <fieldset>
 <legend><b>Definition: $t$-distribution</b></legend>
@@ -1002,6 +1004,8 @@ $$\frac{\sqrt n(\bar X-\mu)}{\sqrt{\sum(X_i-\bar X)^2/(n-1)}}?$$
 
 <h1><a
 name="$F$  distribution">$F$  distribution</a></h1>
+<a href="https://youtu.be/xTL6asmWxA8">Video for this section</a>
+<p></p>
 
 <fieldset>
 <legend><b>Definition: $F$-distribution</b></legend>
