--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -1067,7 +1067,7 @@ $\left[\begin{array}{ccccccccccc}0 &amp; \frac 12\\\frac 12 &amp; -1
 </p>
 In this section we shall deal with the following set up:
 <blockquote>
-$X_1,...,X_n$  are IID $N(0,1),$  or, equivalently $\v X = (X_1,...,X_n)'\sim N_N(\v0,I).$  We have some real, symmetric matrix
+$X_1,...,X_n$  are IID $N(0,1),$  or, equivalently $\v X = (X_1,...,X_n)'\sim N_n(\v0,I).$  We have some real, symmetric matrix
  $A.$  We want to explore various necessary and sufficient condtions under which the quadratic form $\v X'A\v X$ 
  will have a $\k k$  distribution, and how $k$  is related with $A.$
 </blockquote>
@@ -1107,7 +1107,7 @@ We want this to be the characteristic function of $\k r$  for some $r.$  So
 $$\prod_1^k (1-2it d_j)^{-1/2}=(1-2it)^{-r/2}.$$
 In other words, we need 
 $$(1-2it d_1)\cdots (1-2it d_k)=(1-2it)^r.$$
-Matching degrees of sides, we see $r=k.$  
+Matching degrees of both sides, we see $r=k.$  
 <p></p>
 Also, matching coefficients of powers of $t,$  we 
  see that $d_1=\cdots=d_k=1.$  Hence $A = P'\left[\begin{array}{ccccccccccc}I &amp; O\\O &amp; O
