--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -236,7 +236,10 @@ function myFunction() {
 <a href="#Problem set 10">Problem set 10</a>
 </li>
 <li>
-<a href="#Distribution of quadratic forms">Distribution of quadratic forms</a>
+<a href="#Distribution of quadratic forms (part 1)">Distribution of quadratic forms (part 1)</a>
+</li>
+<li>
+<a href="#Distribution of quadratic forms (part 2)">Distribution of quadratic forms (part 2)</a>
 </li>
 <li>
 <a href="#Miscellaneous problems">Miscellaneous problems</a>
@@ -1042,7 +1045,9 @@ $$\frac{\sum(X_i-\bar X)^2/(m-1)}{\sum(Y_i-\bar Y)^2/(n-1)}?$$
 </p>
 
 <h1><a
-name="Distribution of quadratic forms">Distribution of quadratic forms</a></h1>
+name="Distribution of quadratic forms (part 1)">Distribution of quadratic forms (part 1)</a></h1>
+<a href="https://youtu.be/XCtgYh2ux7M">Video for this section</a>
+<p></p>
 
 <fieldset>
 <legend><b>Definition: Quadratic form</b></legend>
@@ -1115,6 +1120,11 @@ Also, matching coefficients of powers of $t,$  we
  be idempotent. This completes the proof.
 <b><i>[QED]</i></b>
 </p>
+
+<h1><a
+name="Distribution of quadratic forms (part 2)">Distribution of quadratic forms (part 2)</a></h1>
+<a href="https://youtu.be/ObK-yPeTs7E">Video for this section</a>
+<p></p>
 We know that sum of independent $\chi^2$  random variables is a again a $\chi^2$  random variable with degrees of freedom
  adding up. Here is a partial converse.
 <fieldset>
