--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -152,7 +152,10 @@ function myFunction() {
 <h3>Multinomial and Dirichlet distributions</h3>
 <ul>
 <li>
-<a href="#Multinomial distribution">Multinomial distribution</a>
+<a href="#Multinomial distribution (part 1)">Multinomial distribution (part 1)</a>
+</li>
+<li>
+<a href="#Multinomial distribution (part 2)">Multinomial distribution (part 2)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 1">Problem set 1</a>
@@ -172,7 +175,9 @@ $\newcommand{\v}[1]{\boldsymbol{#1}}$
 <title>Multinomial and Dirichlet distributions</title>
 
 <h1><a
-name="Multinomial distribution">Multinomial distribution</a></h1>
+name="Multinomial distribution (part 1)">Multinomial distribution (part 1)</a></h1>
+<a href="https://youtu.be/VGn9MEDk888">Video for this section</a>
+<p></p>
 The multinomial distribution is a direct generalisation of the binomial distribution. We often think of the $Binom(n,p)$ 
  distribution as the distribution of the number, $X$, of heads obtained in $n$ 
  independent tosses of a coin with
@@ -205,6 +210,11 @@ $$\v X + \v Y\sim Multinom(m+n,\v p).$$
 </fieldset>
 In particular, we can think of $Multinom(n,\v p)$  as the distribution of the sum of $n$  independent $Multinom(1,\v p)$ 
  random vectors. 
+<h1><a
+name="Multinomial distribution (part 2)">Multinomial distribution (part 2)</a></h1>
+<a href="https://youtu.be/tyckoyNxRXQ">Video for this section</a>
+<p></p>
+
 <p></p>
 Suppose we roll the same die twice independently. Accordingly we get 
 $\v X,\v Y$  both having $ Multinom(1,\v p)$  distribution.  Let $\v
