--- a/prob2_2025/dirichlet.html
+++ b/prob2_2025/dirichlet.html
@@ -258,6 +258,8 @@ name="Problem set 1">Problem set 1</a></h2>
 
 <h1><a
 name="Dirichlet distribution">Dirichlet distribution</a></h1>
+<a href="https://youtu.be/eby4pP_vWQA">Video for this section</a>
+<p></p>
 Now we are going to work with a multivariate distribution called the <b><font color="red" size="40">Dirichlet distribution</font></b>,
  which is a multivariate generalisation of the Beta distribution. 
 <p></p>
