--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -272,6 +272,10 @@ read. We shall cover only about half the book in this
 semester. Cheap Indian edition available.</li>
 
 <li>
+<b>Introduction to Probability Theory</b> by <i>Hoel, Port and Stone</i>: Another nice book.
+Thin. May not be available offline (except in our library).</li>
+
+<li>
 <b>Probability Theory (Vol 1)</b> by <i>William Feller</i>:
 A classic book which (in my opinion) is not very
 well-organised. But it contains lots of discussions on practical
