--- a/prob1_2025/index.html
+++ b/prob1_2025/index.html
@@ -172,7 +172,7 @@ function myFunction() {
 
 <h1 xmlns=""><a
 name="Probability Theory I">Probability Theory I</a></h1>
-This is the class webpage for Probablity Theory I
+This is the class webpage for Probability Theory I
 (2025).
 <ul>
 
@@ -183,6 +183,17 @@ This is the class webpage for Probablity Theory I
 <b>Email:</b>arnabc at isical dot ac in</li>
 
 </ul>
+
+<table align="right" width="50%">
+<tr>
+<td><b>Notice board</b></td>
+</tr>
+<tr>
+<td>
+<iframe src="news.html"></iframe>
+</td>
+</tr>
+</table>
 
 <h2><a
 name="Class notes">Class notes</a></h2>
