--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,14 +1,10 @@
 <html>
 <body>
-<table border="1">
+<dl>
 
-<tr>
-<td>July 21, 2025</td>
-<td>Classes start.</td>
-</tr>
+<dt><b>July 21, 2025:</b></dt>
+<dd>Classes start.</dd>
 
-
-
-</table>
+</dl>
 </body>
 </html>
